--- a/page3.html
+++ b/page3.html
@@ -37,18 +37,17 @@
 
   
   
-  <!-- Hotjar Tracking Code for HIA -->
+<!-- Hotjar Tracking Code for Proyecto -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3732999,hjsv:6};
+        h._hjSettings={hjid:3734226,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-
 
 </head>
 <body>
